fix jump

--- a/src/index.css
+++ b/src/index.css
@@ -72,5 +72,6 @@
   }
   body {
     @apply bg-black text-white;
+    overflow: hidden;
   }
 }
